# openrustswarm

./: .gitignore  BENCHMARKS.md  CONTRIBUTING.md  Dockerfile.entroly  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  entroly-publish.yml
cogops-skill/: SKILL.md
cogops-wasm/: Cargo.toml
cogops-wasm/src/: grid.rs  lib.rs  pheromone.rs  physics.rs  pool.rs
demo/: demo_server.py
ebbiforge/: __init__.py  agent.py  cli.py  embeddings.py  memory.py  overmind.py  runtime.py  swarm.py  task.py
ebbiforge-core/: Cargo.toml  README.md
ebbiforge-core/python/: __init__.py
ebbiforge-core/src/: lib.rs
ebbiforge-core/src/compliance/: escalation.rs  mod.rs  pii.rs  policy.rs  ratelimit.rs  sanitizer.rs  trace.rs
ebbiforge-core/src/core/: agent.rs  config.rs  graph.rs  middleware.rs  mod.rs  runner.rs  security.rs  shared_memory.rs  tools.rs  workflow.rs
ebbiforge-core/src/core/storage/: dragonfly.rs  mod.rs  remote_vector.rs
ebbiforge-core/src/evolution/: curiosity.rs  metacognition.rs  mod.rs  population.rs  registry.rs  sandbox.rs  synthesizer.rs
ebbiforge-core/src/intel/: introspection.rs  mod.rs  pollination.rs  pruning.rs  reviewer.rs  safety.rs
ebbiforge-core/src/security/: aes.rs  mod.rs
ebbiforge-core/src/swarm/: criticality_test.rs  evolution_test.rs  grid.rs  lod.rs  mod.rs  pheromone.rs  pollination.rs  promoter.rs  py_api.rs  scale_test.rs  swarm_engine.rs  tensor_engine.rs  watcher.rs
ebbiforge-core/src/utils/: benchmark.rs  mod.rs
ebbiforge-core/src/worldmodel/: consolidator.rs  dynamics.rs  encoder.rs  geometric.rs  mod.rs  planner.rs  trainer.rs
ebbiforge/connectors/: __init__.py  base.py  http_poller.py  rss_feed.py  webhook.py
ebbiforge/outputs/: __init__.py  base.py  console.py  jsonfile.py  webhook_out.py
entroly/: LICENSE  demo_value.py  pyproject.toml
entroly-core/: README.md  pyproject.toml
entroly-core/src/: lib.rs
entroly/.github/workflows/: ci.yml  docker-publish.yml
entroly/bench/: autotune.py
entroly/entroly/: _docker_launcher.py  long_term_memory.py  proxy.py  proxy_config.py  proxy_transform.py  server.py  tuning_config.json
entroly/entroly-core/src/: hierarchical.rs  knapsack_sds.rs  lib.rs
entroly/tests/: test_ios.py
examples/: 01_hello_swarm.py  02_evolution.py  03_live_data.py  04_selective_reasoning.py  05_compliance.py  06_log_monitoring.py  memory_calibration.py  openrustswarm.py  quick_start_test.py  verify_all_benchmarks.py
openrustswarm-core/: Cargo.toml
openrustswarm-core/src/: lib.rs
openrustswarm-core/src/compliance/: audit.rs
openrustswarm-core/src/swarm/: criticality_test.rs  evolution_test.rs  master_pipeline.rs  mmap_pool.rs  mod.rs  spatial.rs  watcher.rs
openrustswarm-core/src/worldmodel/: diffusion.rs  mod.rs
server/: main.py  privacy.py  proof.py  swarm_brain.py
web/: Dockerfile  package-lock.json  package.json
web/app/: layout.tsx  page.tsx
web/app/swarm/: page.tsx
web/components/swarm/: AgentCanvas.tsx  ColorModeSelector.tsx  FloatingHUD.tsx  NarrationPanel.tsx  ParameterPanel.tsx  PresetSelector.tsx  R0Indicator.tsx  SparklineStrip.tsx  SwarmWorkstation.tsx
web/hooks/: useNarration.ts  useRealDataFeed.ts  useSimulationLoop.ts  useTimeSeriesHistory.ts  useWasmEngine.ts
web/lib/: canvas2d-renderer.ts  color-maps.ts  presets.ts  ring-buffer.ts  sparkline-renderer.ts  types.ts  wasm-bridge.ts  webgl-renderer.ts
web/public/wasm/: cogops_wasm.d.ts  cogops_wasm.js  cogops_wasm_bg.wasm  cogops_wasm_bg.wasm.d.ts
(+7 files in other folders)
