[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "ebbiforge"
version = "1.0.0"
description = "High-performance multi-agent AI framework — 100M agent scale, selective LLM reasoning"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["ai", "agents", "swarm", "llm", "multi-agent", "orchestration", "world-model", "dynamics"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
connectors = ["requests>=2.28"]
all = ["requests>=2.28"]

[project.scripts]
ebbiforge = "ebbiforge.cli:main"

[project.urls]
Homepage = "https://github.com/juyterman1000/ebbiforge"
Documentation = "https://github.com/juyterman1000/ebbiforge#readme"
Repository = "https://github.com/juyterman1000/ebbiforge"

[tool.maturin]
manifest-path = "ebbiforge-core/Cargo.toml"
python-packages = ["ebbiforge"]
module-name = "ebbiforge_core"
bindings = "pyo3"
features = ["pyo3/extension-module"]
