[package]
name = "ebbiforge-core"
version = "1.0.0"
edition = "2021"
description = "High-performance AI Agent Runtime — 100M agent scale"

[lib]
name = "ebbiforge_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Async Runtime
tokio = { version = "1.32", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Python Bindings
pyo3 = { version = "0.23", features = ["extension-module"] }

# Utilities
anyhow = "1.0"
thiserror = "1.0"
dashmap = "5.5"
regex = "1.10"
parking_lot = "0.12"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json", "gzip", "brotli"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"

# Storage Backends
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
qdrant-client = "1.7"

# Security (Cryptography)
ed25519-dalek = "2.1"
aes-gcm = "0.10"
rand = "0.8"
rand_distr = "0.4"
hex = "0.4"
rayon = "1.8"
urlencoding = "2.1.3"
fastembed = { version = "5.11.0", default-features = false, features = ["hf-hub", "hf-hub-rustls-tls", "ort-download-binaries-rustls-tls"] }
candle-core = "0.9.2"
candle-nn = "0.9.2"
memmap2 = "0.9"

# WASM specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
